--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@babel/register": "^7.23.7"
+  }
 }
